# test-time-adaptation

./: .gitignore  Makefile  README.md  pyproject.toml  requirments.txt  run_tta.py
app/: app.py
config/: __init__.py
config/cifar10c/: default.py  lame.yaml  memo.yaml  shot.yaml  source.yaml  source_robustbench_example.yaml  tent.yaml
examples/: baseline.ipynb  plot_all_shift_with_severity_5.ipynb  plot_with_index_number.ipynb  run_memo.ipynb
examples/experiments_3/: adapt_per_quadrant.py  adapt_with_single_quadrant.py  adaptation_by_quadrants.py  adaptation_by_single_quadrant.py  plot_all_adaptation_movement.py  split_dataset.py
method/: base.py  source.py
misc/: registry.py
tests/: installation_check.py  pretrain_cifar10.py  train_resnet26_cifar10.py
tta/: __init__.py  metrics.py  path.py
tta/asset/: resnet26_cifar10.pth
tta/config/: __init__.py  tools.py  utils.py
tta/config/cifar10c/: __init__.py  default.py  memo.yaml  source.yaml
tta/data/: __init__.py  cifar.py  dataloader.py  split.py
tta/engine/: dataset.py  runner.py
tta/method/: __init__.py  base.py  lame.py  memo.py  shot.py  source.py  tent.py
tta/misc/: registry.py  utils.py
tta/model/: __init__.py  huggingface.py  huggingface.yaml  resnet.py  utils.py  wide_resnet.py
tta/utils/: path.py
tta/utils/config/: __init__.py  huggingface.yaml  tools.py
tta/utils/config/cifar10c/: default.py
tta/utils/data/: __init__.py  cifar.py  dataloader.py  memo.py
