[project]
name = "tta"
version = "0.1.0"
description = ""
authors = [
    {name = "Aiden-Jeon",email = "aiden.jongseob@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "torch (==2.5.1)",
    "numpy (==1.26.4)",
    "torchvision (==0.20.1)",
    "yacs (>=0.1.8,<0.2.0)",
    "tabulate (>=0.9.0,<0.10.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
