[project]
name = "tta"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "huggingface-hub>=0.29.1",
    "numpy==1.26.4",
    "robustbench",
    "setuptools>=75.8.0",
    "tabulate>=0.9.0",
    "torch==2.5.1",
    "torchvision==0.20.1",
    "yacs>=0.1.8",
]

[tool.uv.sources]
robustbench = { git = "https://github.com/RobustBench/robustbench.git" }

[project.optional-dependencies]
dev = [
    "ipython",
    "ipykernel",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[tool.setuptools]
packages = ["tta"]
